Added message id / response handling

--- a/client/index.html
+++ b/client/index.html
@@ -114,9 +114,9 @@
                 <div><input type="text" placeholder="Email Address" id="signup-email"></div>
             </div>
             
-            <div>
+            <div id="signup-message">
                 <ul>
-                    <li>You must use a valid email address</li>
+                    <li class="danger">You must use a valid email address</li>
                     <li>We will send a link to your email address to confirm the account</li>
                     <li>Your <strong>Username</strong> will expire if the link is not clicked within 30 minutes</li>
                 </ul>
@@ -125,6 +125,7 @@
             <div class="modal-buttons">
                 <div class="modal-button" id="signup-goback">Go Back</div>
                 <div class="modal-button primary" id="signup-submit">Signup</div>
+                <div class="modal-button primary" id="signup-close" style="display: none">Close</div>
             </div>
         </div>
     </div>
