Completed JWT and registration

--- a/client/index.html
+++ b/client/index.html
@@ -78,7 +78,7 @@
         </div>
     </div>
     
-    <div class="modal" id="welcome">
+    <div class="modal" id="welcome" style="display: none">
         <div class="modal-content">
             <div id="welcome-login">
                 <div><div><input type="checkbox" value="1" id="welcome-remember">Remember Me</div></div>
