Added username validation

--- a/client/index.html
+++ b/client/index.html
@@ -117,7 +117,7 @@
             
             <div id="signup-message">
                 <ul>
-                    <li class="danger">You must use a valid email address</li>
+                    <li class="important">You must use a valid email address</li>
                     <li>We will send a link to your email address to confirm the account</li>
                     <li>Your <strong>Username</strong> will expire if the link is not clicked within 30 minutes</li>
                 </ul>
