--- a/client/index.html
+++ b/client/index.html
@@ -83,7 +83,7 @@
             <div id="welcome-login">
                 <div><div><input type="checkbox" value="1" id="welcome-remember">Remember Me</div></div>
                 <div><input type="text" placeholder="Username" id="welcome-username" autofocus></div>
-                <div class="modal-button primary">Login</div>
+                <div class="modal-button primary" id="welcome-submit">Login</div>
             </div>
             
             <div id="welcome-title">
