We now prevent the JavaScript from caching

--- a/client/index.html
+++ b/client/index.html
@@ -131,7 +131,13 @@
         </div>
     </div>
     
-    <script src="index.js" type="module"></script>
+    <script>
+        let script = document.createElement('script')
+        script.setAttribute('src', 'index.js?v=' + Date.now())
+        script.setAttribute('type', 'module')
+        
+        document.body.appendChild(script)
+    </script>
 </body>
 
 </html>
