--- a/client/login.html
+++ b/client/login.html
@@ -24,7 +24,13 @@
         </div>
     </div>
     
-    <script src="login.js" type="module"></script>
+    <script>
+        let script = document.createElement('script')
+        script.setAttribute('src', 'login.js?v=' + Date.now())
+        script.setAttribute('type', 'module')
+        
+        document.body.appendChild(script)
+    </script>
 </body>
 
 </html>
