--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="main">
         <div id="server">
-            <div id="name">@ text0rdie</div>
+            <div id="name"></div>
             
             <div class="rows">
                 <div class="tabs">
