Moved the caching controls to the server side

--- a/client/index.html
+++ b/client/index.html
@@ -145,13 +145,7 @@
         </div>
     </div>
     
-    <script>
-        let script = document.createElement('script')
-        script.setAttribute('src', 'index.js?v=' + Date.now())
-        script.setAttribute('type', 'module')
-        
-        document.body.appendChild(script)
-    </script>
+    <script src="index.js" type="module"></script>
 </body>
 
 </html>
