--- a/client/login.html
+++ b/client/login.html
@@ -24,13 +24,7 @@
         </div>
     </div>
     
-    <script>
-        let script = document.createElement('script')
-        script.setAttribute('src', 'login.js?v=' + Date.now())
-        script.setAttribute('type', 'module')
-        
-        document.body.appendChild(script)
-    </script>
+    <script src="login.js" type="module"></script>
 </body>
 
 </html>
