Fixed a few issues with the logout messaging

--- a/client/index.html
+++ b/client/index.html
@@ -136,7 +136,7 @@
             <div class="modal-title">Account Logout</div>
             
             <div id="logout-message">
-                Your remember me has expired or you have requested to log out. Cheers!
+            Your authentication has expired. Please login again.
             </div>
             
             <div class="modal-buttons">
