--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
                                     <div>My Channels</div>
                                     <div class="icons">
                                         <div class="icon">&#9881;</div>
-                                        <div><span class="pill">&#9660;</span></div>
+                                        <div class="pill">&#9660;</div>
                                     </div>
                                 </div>
                                 
@@ -45,7 +45,7 @@
                                     <div>Welcome</div>
                                     <div class="icons">
                                         <div class="icon">&#9881;</div>
-                                        <div><span class="pill">99</span></div>
+                                        <div class="pill">99</div>
                                     </div>
                                 </div>
                             </li>
