Got the open / close channels button working

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
                                     <div>My Channels</div>
                                     <div class="icons">
                                         <div class="icon">&#9881;</div>
-                                        <div class="pill">&#9660;</div>
+                                        <div class="pill" id="channels-toggle" data-toggle="open">&#9660;</div>
                                     </div>
                                 </div>
                                 
